# FireForm

./: .env.example  .gitignore  BATCH_PROCESSING_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURE_IMPLEMENTATION_SUMMARY.md  Makefile  PR_CONTENT.md  PR_VALIDATION.md  README.md  SECRETS.md  SECURITY.md  TEST_RESULTS.md  container-init.sh  docker-compose.yml  incidents.pkl  issues.md  pyproject.toml  pyrightconfig.json  requirements-ai.txt  requirements-dev.txt  requirements.txt  test_full_system.py
api/: __init__.py  admin_sqladmin.py  main.py  similarity_api.py
client/: package-lock.json  package.json  vite.config.ts
docs/: DEPLOYMENT.md  SETUP.md  TESTING.md  api.md  batch_processing.md  cli.md  db.md  docker.md  dpg.html  frontend.md  index.html  privacy.html  profiles.md  profiles_migration_guide.md  profiles_quick_reference.md  run-fireform-full.md  security.md  session_resuming.md  styles.css
examples/: profile_usage_example.py
fireform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: app.js  electron.js  index.html  package.json  styles.css
mobile/: index.html  manifest.json  sw.js
scripts/: run_fireform.ps1
src/: __init__.py  audit.py  backend.py  batch_orchestrator.py  cli.py  compatibility_checker.py  conflict_detector.py  context_enrichment.py  controller.py  evidence_model.py  external_apis_coordinator.py  extraction_quality.py  extractor.py  file_manipulator.py  filler.py  geocoder.py  incident_similarity.py  json_manager.py  llm.py  llm_client.py  logger.py  main.py  pdf_template.py  pdf_utils.py  (+14 more)
(+147 files in other folders)
